# spine

./: .gitignore  Cargo.toml  README.md  SPEC.md
benches/: basic.rs
docs/: architecture.md  cafe-scenario-spec.md  routing-logic.md  simulation-blueprints.md
examples/visualizer/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
examples/visualizer/backend/: Cargo.toml
examples/visualizer/backend/src/: main.rs
examples/visualizer/docs/: cafe-pipeline-flow.md
examples/visualizer/scenarios/: blank.json  cafe-blueprint.json  cafe-pipeline.json
examples/visualizer/src/: App.tsx  index.css  main.tsx
examples/visualizer/src/components/: GraphNodes.tsx  InspectorDialog.tsx  ScenarioManhattanEdge.tsx
examples/visualizer/src/lib/: autoLayout.ts  backend.ts  bus.ts  cafeSimulation.ts  scenarios.ts  simulationPrimitives.ts  simulationQueues.ts  simulationStores.ts  types.ts
src/: address.rs  bus.rs  delivery.rs  error.rs  lib.rs  schema.rs  service.rs  signal.rs
tests/: core.rs
